2008-10-31  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #6626: config.fileTarget for link target on files (thanks to Ralf Hettinger)

2008-10-31  Ingo Renner  <ingo@typo3.org>

	* cleanup: removed the include for an interface that is loaded in backend.php already and therefore is present always

2008-10-31  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9571: Additional condition required to check SSL status in class.t3lib_div.php (thanks to Christian Kuhn)
	* Fixed bug #9659: TCEmain wrongly tests required input-type fields (thanks to Francois Suter)
	* Fixed bug #8399: field tablename in sys_refindex too short (thanks to Steffen Kamper)

2008-10-31  Benjamin Mack  <benni@typo3.org>

	* Included the Javascript Widget Framework extJS in the TYPO3

2008-10-30  Ingo Renner  <ingo@typo3.org>

	* Fixed an inconsitency with between the name, the documentation and the functionality of method loadByTag() in the new caching framework

2008-10-29  Ingo Renner  <ingo@typo3.org>

	* Added feature #9591: Integrate sys_actions into toolbar (contributions by Steffen Kamper)
	* !!! Cleanup #9678: Make TYPO3 require PHP 5.2

2008-10-28  Ingo Renner  <ingo@typo3.org>

	* Added the manual for the OpenID system extension

2008-10-28  Martin Kutschker  <masi@typo3.org>

	* Added feature #9625: Integrate possibility to extend TCEforms palettes easily (implementation by Oliver Hader)
	* Added feature #9474: Integrate OpenID authentication support to TYPO3 (integration by Dmitry Dulepov, OpenID library by JanRain Inc.)

2008-10-28  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #9655: Call to t3lib_div::devLog() without key in index_ts.php (thanks to Francois Suter)
	* Fixed bug #9607: Module DB check uses hardcoded labels (thanks to Christopher Stelmaszyk)
	* Added feature ##9656: Extend t3lib_div::trimExplode to limit the number of elements
	* Follow-up to feature #9575: Return boolean value instead of filtered data