@@ -1,6 +1,7 @@
 2008-10-31  Jeff Segars  <jeff@webempoweredchurch.org>
 
 	* Added feature #6626: config.fileTarget for link target on files (thanks to Ralf Hettinger)
+	* Added feature #3787: New option TSFE.jumpURL_HTTPStatusCode = 30x (thanks to Stefan Geith)
 
 2008-10-31  Ingo Renner  <ingo@typo3.org>
 
